# mcp-test

./: README.md  docker-compose.yaml  main.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
src/: client.py  tools.py
src/shared/: agent.py  models.py
