[tool.poetry]
name = "mcp-test"
version = "0.1.0"
description = ""
authors = ["Grey Lovelace <austin.grey.lovelace@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
langchain = "^0.3.23"
langgraph = "^0.3.31"
fastmcp = "^2.4.0"
boto3 = "^1.37.37"
langchain-aws = "^0.2.21"
langchain-mcp-adapters = "^0.1.1"
grandalf = "^0.8"
fastapi = "^0.115.12"
openinference-instrumentation-langchain = "^0.1.41"
openinference-instrumentation-mcp = "^1.1.0"
arize-phoenix-otel = "^0.9.2"
mcp = "^1.6.0"
openinference-semantic-conventions = "^0.1.17"
langchain-core = "^0.3.55"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
